--- a/helm.yml
+++ b/helm.yml
@@ -13,7 +13,7 @@ configMap:
     CART_PORT: "8080"
     USER_HOST: user
     USER_PORT: "8080"
-    AMQP_HOST: rabbimq-prod.roboshop.internal
+    AMQP_HOST: rabbitmq-prod.roboshop.internal
     AMQP_USER: roboshop
     AMQP_PASS: roboshop123
 
