--- a/helm.yml
+++ b/helm.yml
@@ -15,5 +15,7 @@ configMap:
     USER_PORT: "8080"
     AMQP_HOST: rabbitmq-prod.roboshop.internal
     AMQP_USER: roboshop
-    AMQP_PASS: roboshop123
 
+
+externalSecret:
+  enabled: true
